--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+img{
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  object-fit: cover;
+}
